--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div id="status">
-      <p>Puntos: <span id="score">0</p>
+      <p>Puntos: <span id="score">0</span> / 100</p>
       <p>Tiempo: <span id="timer">5</span> s</p>
     </div>
 
